<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginNetflixActivity"
    android:background="@color/black">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/netflix_logo_height"
        android:src="@drawable/ic_netflix_2015_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
        android:layout_margin="@dimen/margin_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in"
        android:textSize="@dimen/txt_sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cv_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_default"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toTopOf="@+id/cv_password"
        android:backgroundTint="@color/cardview_dark_background">

        <EditText
            android:hint="@string/hint_email_or_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray_netflix"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toTopOf="@+id/gl_center"
        android:backgroundTint="@color/cardview_dark_background">

        <EditText
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray_netflix"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_sign_in_netflix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in_netflix"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/gl_center"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_default"
        android:backgroundTint="@color/red_netflix"
        android:paddingVertical="@dimen/padding_vertical"/>

    <CheckBox
        android:id="@+id/cb_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_netflix"/>

    <TextView
        android:id="@+id/txt_remember"
        android:text="@string/txt_remember_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray_netflix"
        app:layout_constraintStart_toEndOf="@+id/cb_netflix"
        app:layout_constraintTop_toTopOf="@id/cb_netflix"
        app:layout_constraintBottom_toBottomOf="@id/cb_netflix"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_need_help"
        android:textColor="@color/light_gray_netflix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_remember"
        app:layout_constraintBottom_toBottomOf="@+id/txt_remember"
        android:layout_marginEnd="@dimen/margin_default"/>

    <ImageView
        android:id="@+id/icon_facebook"
        android:src="@drawable/icon_facebook"
        android:layout_width="0dp"
        android:layout_height="@dimen/fb_logo_height"
        app:layout_constraintBottom_toTopOf="@id/txt_new_netflix"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_facebook"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/icon_facebook"
        app:layout_constraintTop_toTopOf="@+id/icon_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/icon_facebook"/>

    <TextView
        android:id="@+id/txt_new_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_netflix"
        android:textColor="@color/light_gray_netflix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now_netflix"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/txt_new_netflix"
        app:layout_constraintTop_toTopOf="@id/txt_new_netflix"
        app:layout_constraintBottom_toBottomOf="@id/txt_new_netflix"
        android:paddingStart="@dimen/padding_start_sign_up_now"/>



    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gl_center"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

</androidx.constraintlayout.widget.ConstraintLayout>