<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login2Activity">

    <View
        android:id="@+id/v_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_login2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_center"/>

    <ImageView
        android:elevation="20dp"
        android:src="@drawable/home_icon"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_center_off"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="366dp" />
    
    <View
        android:id="@+id/gl_center_off"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/gl_center_off">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login2"
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/linear_padding_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_default"
                    android:textSize="@dimen/font_size_title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/login2_blue"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_default"/>

                <EditText
                    android:layout_margin="@dimen/margin_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_my_mail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textColor="@color/login2_blue"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_default"/>

                <EditText
                    android:layout_margin="@dimen/margin_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_login2"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_login2"
            app:layout_constraintBottom_toBottomOf="@id/cv_login2"
            android:text="@string/txt_login2"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@id/btn_login2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/margin_default"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



